Closed Bug 70424 Opened 25 years ago Closed 24 years ago

M094 & Trunk N620 Linux crash [@ nsRenderingContextGTK::CopyOffScreenBits]

Categories

(Core Graveyard :: GFX, defect)

x86
Linux
defect
Not set
critical

Tracking

(Not tracked)

VERIFIED FIXED
mozilla0.9.9

People

(Reporter: curt, Assigned: kmcclusk)

Details

(Keywords: crash, qawanted, topcrash, Whiteboard: Fix checked into Mozilla0.9.4 branch and trunk (NOT in Mozilla0.9.5)[PDT+])

Crash Data

Attachments

(1 file, 4 obsolete files)

This crash has been hovering around #10-15 on the topcrash lists. Not much in the way of user comment. Not yet reproduced. Here's a stack trace and some comments to help reproduce it. nsRenderingContextGTK::CopyOffScreenBits() nsViewManager2::Refresh() nsViewManager2::DispatchEvent() HandleEvent() nsWidget::DispatchEvent() nsWidget::DispatchWindowEvent() nsWindow::DoPaint() nsWindow::Update() nsWindow::UpdateIdle() libglib-1.2.so.0 + 0x12a8f (0x40712a8f) libglib-1.2.so.0 + 0x11987 (0x40711987) libglib-1.2.so.0 + 0x12001 (0x40712001) libglib-1.2.so.0 + 0x121cc (0x407121cc) libgtk-1.2.so.0 + 0x93e57 (0x4062be57) nsAppShell::Run() nsAppShellService::Run() main1() main() libc.so.6 + 0x1bb65 (0x4026fb65) URL:(26951744) tdwaterhouse.com URL:(26899803) www.octfcu.org URL:(26969348) http://www.pjgrady.com/ URL:(26973240) http://www.amazon.com/ Comment: (26951744) clicked on Login button Comment: (26899803) attemting to go to www.octfcu.org from my netscape home page Comment: (26969348) I clicked on the 'products' link Comment: (26973240) I tried to sign in with amazon. This is an SSL session. Apparently NS 6.01 is having trouble with SSL connections here. Comment: (26890162) Adding a bookmerk
Adding "crash" to the keywords for tracking.
Keywords: crash
Reassigning to Waqar. Setting milestone to mozilla0.9.1
Target Milestone: --- → mozilla0.9.1
Reassigning to Waqar
Assignee: kmcclusk → waqar
Setting milestone to Mozilla0.9
Target Milestone: mozilla0.9.1 → mozilla0.9
I cant seem to crash with 03/26/01 build, I tried all the url's given in the bug.
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → WORKSFORME
Marking verified in the May 30th Linux build
Status: RESOLVED → VERIFIED
Reopening bug. Seeing the same stack trace in the M091 Linux build (2001060713). Comments are: (31556346) Comments: Trying to load URL from GAIM:http://www.cdnow.com/cgi- bin/mserver/SID=925781270/pagename=/RP/CDN/FIND/album.html/artistid=EMERSON+LAKE +&+PALMER/itemid=632588 (31528370) Comments: Closing popups (31494662) Comments: sent a Destroy signal to one of the windows. This should not kill the program. Unsuccessful at reproducing the crash with the above URL. Adding keyword: qawanted Changing summary to M091
Status: VERIFIED → REOPENED
Keywords: qawanted
Resolution: WORKSFORME → ---
Summary: N601 Linux crash [@ nsRenderingContextGTK::CopyOffScreenBits] → M091 Linux crash [@ nsRenderingContextGTK::CopyOffScreenBits]
Severity: normal → critical
Reassinging to Don. Marking 0.9.0 nsbranch.
Assignee: waqar → dcone
Status: REOPENED → NEW
Keywords: nsBranch
Target Milestone: mozilla0.9 → mozilla0.9.3
Still seeing this one in M092 and a few incidents in the trunk. Adding kw: topcrash Trunk builds 6-30 to 7-02 have two crashes with this one comment: (32462740) Comments: Clicked the "Web Site" button in gAIM's "About Gaim" window. The browser window started to come up and crashed. That page works fine normally. M092 has 19 incidents with the following comments: (32378635) URL: x.themes.org (32378635) Comments: downloading / autoinstalling (32375442) URL: ftp.netscape.com (32375442) Comments: installing jre.xpi from fp.netscape.comstalled and mozilla stoped responding
Keywords: topcrash
Here are a few detailed entries for crashes with M092: Incident ID 32820374 Stack Signature nsRenderingContextGTK::CopyOffScreenBits() 5726d719 Bug ID Trigger Time 2001-07-12 10:37:09 User Comments When switching virtual desktops under XFree86 4.0.3 using the sawfish window manager and Gnome 1.2, Mozilla usually crashes after switching away from the virtual desktop that it is on and then back again. Usually the amount of time with the browser on a Build ID 2001062823 Product ID Netscape6.10 Platform ID LinuxIntel Incident ID 32820374 Stack Signature nsRenderingContextGTK::CopyOffScreenBits() 5726d719 Bug ID Trigger Time 2001-07-12 10:37:09 User Comments When switching virtual desktops under XFree86 4.0.3 using the sawfish window manager and Gnome 1.2, Mozilla usually crashes after switching away from the virtual desktop that it is on and then back again. Usually the amount of time with the browser on a Build ID 2001062823 Product ID Netscape6.10 Platform ID LinuxIntel Incident ID 32789115 Stack Signature nsRenderingContextGTK::CopyOffScreenBits() 05207855 Bug ID Trigger Time 2001-07-11 17:32:00 User Comments Clicked on a link from gaim to the page. I had clicked on it previously and gotten it to come up fine, then closed the window. The mail window was still open. Clicking on the link a second time caused mozilla to crash. Build ID 2001062823 Product ID Netscape6.10 Platform ID LinuxIntel Stack Trace nsRenderingContextGTK::CopyOffScreenBits() nsViewManager::Refresh() nsViewManager::DispatchEvent() HandleEvent() nsWidget::DispatchEvent() nsWidget::DispatchWindowEvent() nsWindow::DoPaint() nsWindow::Update() nsWindow::UpdateIdle() libglib-1.2.so.0 + 0x10ff0 (0x4036eff0) libglib-1.2.so.0 + 0x10055 (0x4036e055) libglib-1.2.so.0 + 0x10659 (0x4036e659) libglib-1.2.so.0 + 0x107e8 (0x4036e7e8) libgtk-1.2.so.0 + 0x9165b (0x4028365b) nsAppShell::Run() nsAppShellService::Run() main1() main() libc.so.6 + 0x1c177 (0x404a5177) As Tom mentioned, there are a few crashes on the MozillaTrunk, but I haven't seen any in th branch Talkback data...but then again, we don't have a lot of crash data for branch builds yet.
Summary: M091 Linux crash [@ nsRenderingContextGTK::CopyOffScreenBits] → M092 & Trunk Linux crash [@ nsRenderingContextGTK::CopyOffScreenBits]
Confirm bug switching virtual desktops under XFree86 4.0.2 using the sawfish window manager 0.37.3 and Gnome 1.3.0, Mozilla 0.9.2 and recent nightlies.
I can not reproduce this.. at all. Is there a URL to go to.. does a popup come up, is there a version of linux..HELP.. I am pounding and nothing bad happens.
another thought. maybe there is something wrong with Sawfish.. one of there versions is bad.. can you use another version of sawfish see if it gets fixed. Also, how do you check to see what version is running.
OK, I'll upgrade sawfish and maybe X/gnome later this week. See what it gives. The bug could be with sawfish - I noticed that X starts crashing randomly too, once I have started a Mozilla session, even after killing it. With Mozilla X crashes 4 times a day. Without Mozilla it does not crash. If you get a core dump of X - would that help? Oh yeah, I am running on ROCK Linux, Linux version 2.4.2 (root@genova) (gcc version 2.95.2 19991024 (release)).
Target Milestone: mozilla0.9.3 → mozilla0.9.4
Keywords: nsBranchnsbranch
Target Milestone: mozilla0.9.4 → mozilla0.9.6
Keywords: nsbranch
41 incidents in the M094 data. Updating the summary to M094. Not seeing it in the Trunk or N620 however. A few comments: (35870159) URL: http://www.securityfocus.com (35869609) URL: http://www.securityfocus.com (35859828) URL: http://www.svd.se (35859828) Comments: Got rid of an ad window (annihilated or closed it don't remember) (35857621) Comments: Was pressing the home button. (35840735) Comments: I was reading mail and then switched over to a browser window andclicked on the "Bookmarks" button the the Personal Bar (?) and it crashed. (35623115) Comments: Sawfish 0.38 destroy window from linux vanilla RH 7.1 kills not only one window but whole browser. (35548103) URL: http://www.marko.net/gaim (35482022) Comments: Absolutely nothing (35476066) URL: typing in web.icq.com (never got there) (35476066) Comments: Typing in a new url. I selected the http:// part by accident (I think) and then deleted the rest.started typing in web.icq.com and kaboom.I do really like 094 guys (and gals) thanks!
Summary: M092 & Trunk Linux crash [@ nsRenderingContextGTK::CopyOffScreenBits] → M094 & Trunk Linux crash [@ nsRenderingContextGTK::CopyOffScreenBits]
I haven't been able to reproduce the crash, but inspection of stack trace indicates allocating the offscreen for the backbuffer may be failing. I attached a patch which fixes up the error handling on GTK when it fails to allocate an offscreen.
Taking this bug.
Assignee: dcone → kmcclusk
Comment on attachment 51905 [details] [diff] [review] Add passing of error when allocating offscreen fails on GTK r=pavlov
Attachment #51905 - Flags: review+
Comment on attachment 51905 [details] [diff] [review] Add passing of error when allocating offscreen fails on GTK sr=attinasi - Nit: indenting is bad at + rv = surf->Init(..) also, does g_return_val_if_fail need the global scoping '::'?
Attachment #51905 - Flags: superreview+
marking nsbranch+ PDT: Very simple patch which returns an error code when allocating an offscreen failed. Should fix this topcrash bug.
Whiteboard: nsbranch+
Keywords: nsbranch+
Whiteboard: nsbranch+
Whiteboard: ETA: ready to checkin
Status: NEW → ASSIGNED
nice. sending this one aroudn to see if we can get + this morning (if not, let's talk about it @ 3 p.m. today).
Whiteboard: ETA: ready to checkin → ETA: ready to checkin [PDT]
pls check this in today, if you can - PDT+
Whiteboard: ETA: ready to checkin [PDT] → ETA: ready to checkin [PDT+]
Checked patch 52122 into Mozilla0.9.4 branch.
Whiteboard: ETA: ready to checkin [PDT+] → Fix checked into Mozilla0.9.4 branch[PDT+]
Fix checked into trunk.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago24 years ago
Resolution: --- → FIXED
Whiteboard: Fix checked into Mozilla0.9.4 branch[PDT+] → Fix checked into Mozilla0.9.4 branch and trunk (NOT in Mozilla0.9.5)[PDT+]
talkback staff - is this still a Linux topcrash reported after 10-6? I couldn't tell when I went to the Talkback pages although I went to the Linux Simple Crash Analysis page and still saw this stack trace in the reports, but it showed Crash data range: 2001-10-04 to 2001-10-14 and Build ID range: 2001091311 to 2001091311
Trunk does not show any incidents of this signature in the last ten days. All of the crashes in the data are in M094 and previous milestones. It hasn't appeared yet in M095. Marking Verified.
Status: RESOLVED → VERIFIED
Reopening as N620 topcrash on the stack signature: nsRenderingContextGTK::CopyOffScreenBits Stack Trace: nsRenderingContextGTK::CopyOffScreenBits() nsViewManager::Refresh() nsViewManager::DispatchEvent() HandleEvent() nsWidget::DispatchEvent() nsWidget::DispatchWindowEvent() nsWindow::DoPaint() nsWindow::Update() nsWindow::UpdateIdle() libglib-1.2.so.0 + 0x112f2 (0x403432f2) libglib-1.2.so.0 + 0x102d9 (0x403422d9) libglib-1.2.so.0 + 0x108e3 (0x403428e3) libglib-1.2.so.0 + 0x10995 (0x40342995) nsAppShell::DispatchNativeEvent() nsXULWindow::ShowModal() nsWebShellWindow::ShowModal() nsContentTreeOwner::ShowAsModal() nsWindowWatcher::OpenWindowJS() nsWindowWatcher::OpenWindow() nsPromptService::DoDialog() nsPromptService::PromptPassword() nsPrompt::PromptPassword() si_CheckGetPassword() SINGSIGN_PromptPassword() nsSingleSignOnPrompt::PromptPassword() nsMsgIncomingServer::GetPasswordWithUI() nsPop3Protocol::GetPassword() nsPop3Protocol::SendPassword() nsPop3Protocol::ProcessProtocolState() nsMsgProtocol::OnDataAvailable() nsOnDataAvailableEvent::HandleEvent() nsARequestObserverEvent::HandlePLEvent() PL_HandleEvent() PL_ProcessPendingEvents() nsEventQueueImpl::ProcessPendingEvents() event_processor_callback() our_gdk_io_invoke() libglib-1.2.so.0 + 0xec10 (0x40340c10) libglib-1.2.so.0 + 0x102d9 (0x403422d9) libglib-1.2.so.0 + 0x108e3 (0x403428e3) libglib-1.2.so.0 + 0x10a7c (0x40342a7c) libgtk-1.2.so.0 + 0x8dd97 (0x40265d97) nsAppShell::Run() nsAppShellService::Run() main1() main() libc.so.6 + 0x18a42 (0x40437a42) COMMENTS/URLs: (37572002) Comments: Trying netscape 6.2 (37512026) Comments: sucks (37506921) Comments: fuck 2 (37505377) Comments: netscape sucks i ve spent 2houres to activate an acount and now netscape goes down i m verry angry
Status: VERIFIED → REOPENED
Resolution: FIXED → ---
Summary: M094 & Trunk Linux crash [@ nsRenderingContextGTK::CopyOffScreenBits] → M094 & Trunk N620 Linux crash [@ nsRenderingContextGTK::CopyOffScreenBits]
Target Milestone: mozilla0.9.6 → mozilla0.9.7
Since it crashes in nsRenderingContextGTK::CopyOffScreenBits It is probable that one of the following calls within CopyOffScreenBits is causing the crash: destsurf->GetDrawable(...) (destsurf is set to mOffscreenSurface) aSrcSurf->GetDrawable(...) mTranMatrix->TransformCoord(...) There are null checks at the top of CopyOffScreenBits for aSrcSurf mTranMatrix mSurface so either destsurf is null because mOffscreenSurface is null which causes destsurf->GetDrawable to crash or one of the following has a stale pointer ----------------- aSrcSurf mOffScreenSurface mTranMatrix
Target Milestone: mozilla0.9.7 → mozilla0.9.8
Target Milestone: mozilla0.9.8 → mozilla0.9.9
Keywords: nsbeta1+
Attachment #51905 - Attachment is obsolete: true
Attachment #52122 - Attachment is obsolete: true
Keywords: nsbranch+
Another attempt to prevent this topcrasher
Comment on attachment 69367 [details] [diff] [review] Check for null mOffscreenSurface in CopyOffScreenBits 1. What about turning this into -- snip -- NS_ENSURE_TRUE(mOffscreenSurface != nsnull, NS_ERROR_NULL_POINTER); /* much shorter */ -- snip -- 2. Can you patch nsRenderingContextXlib.cpp, too - or should I provide a patch ?
Attached patch patch using Roland's suggestion (obsolete) — Splinter Review
Attachment #69367 - Attachment is obsolete: true
I'm not sure if this is causing a problem on the XLIB implementation, but it wouldn't hurt to check for a null mOffscreenSurface anyway. Roland: Could you provide the patch for the XLIB implementation within a separate bug?
Kevin McCluskey wrote: > I'm not sure if this is causing a problem on the XLIB implementation, but it > wouldn't hurt to check for a null mOffscreenSurface anyway. Xlib gfx works exactly like GTK+ gfx code except that 1. It does not use GDK/GTK+ libraries 2. Implements support for printer devices ("Xprint" - but those changes are very small and mainly offloaded into subclasses of the Xlib gfx classes (e.g. |nsRenderingContextXp| is a subclass of |nsRenderingContextXlib|)) ... > Roland: Could you > provide the patch for the XLIB implementation within a separate bug? Filing a seperate bug is always bad. It makes searching for bugs harder and causes "bloat" in bugzilla as each GTK+ change would need a Xlib gfx counterpart (==twice the bugs). See the note above about how Xlib gfx compares to GTK+ gfx - Xlib is nearly line-by-line the same code. If you do not have the time to look at the XLib gfx code then CC: me to the bugs, I'll file the patches... :)
Attachment #69378 - Attachment is obsolete: true
Comment on attachment 69586 [details] [diff] [review] Patch for both GTK+ and Xlib gfx sr=attinasi
Attachment #69586 - Flags: superreview+
Comment on attachment 69586 [details] [diff] [review] Patch for both GTK+ and Xlib gfx r=pavlov
Attachment #69586 - Flags: review+
Checked in patch 69586 Marking fixed.
Status: REOPENED → RESOLVED
Closed: 24 years ago24 years ago
Resolution: --- → FIXED
Marking verified in the April 7th Linux Red hat build (2002-04-07-06).
Status: RESOLVED → VERIFIED
Product: Core → Core Graveyard
Crash Signature: [@ nsRenderingContextGTK::CopyOffScreenBits]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: