mozilla/gfx/src/gtk/nsDrawingSurfaceGTK.cpp
@@ -274,6 +274,8 @@ NS_IMETHODIMP nsDrawingSurfaceGTK :: Init(GdkGC *aGC, PRUint32 aWidth,
     gdk_image_destroy(mImage);
   mImage = nsnull;
 
+  g_return_val_if_fail(mPixmap != nsnull, NS_ERROR_FAILURE);
+  
   return NS_OK;
 }
 
